# rgbd_pose_estimation

./: .gitignore  CMakeLists.txt  Library.cpp  Parameters.yml  README.md  SimpleMain.cpp  TestMain.cpp
common/: EigenUtil.hpp  OtherUtil.hpp
pose/: AOOnlyPoseAdapter.hpp  AOPoseAdapter.hpp  AbsoluteOrientation.hpp  AbsoluteOrientationNormal.hpp  MinimalSolvers.hpp  NormalAOPoseAdapter.hpp  P3P.hpp  PnPPoseAdapter.hpp  PoseAdapterBase.hpp  Simulator.hpp  Utility.hpp
sophus/: se3.hpp  so3.hpp
